syntax = "proto3";

package msg;

message LoginRequest {
  string acct = 1;
  string pass = 2;
}

message LoginResponse {
    uint32 error_code = 1;
}
